--- a/Vitabetes (Graphic)/añadirinformacionb.html
+++ b/Vitabetes (Graphic)/añadirinformacionb.html
@@ -7,6 +7,8 @@
 	<title>Vitabes</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
+	
+	Esto es una prueba:V
 
 	<div class="w3-panel w3-light-blue w3-card-4">
 		<p class="w3-center w3-opacity" style="font-size: 2.5rem;">Vitabes-Paciente</p>
