Links para testear Cuidador y Doctor
Aqui esta perras

--- a/Vitabetes(cascaron)/inicio.html
+++ b/Vitabetes(cascaron)/inicio.html
@@ -40,6 +40,8 @@
 	</div>
 
 	<a href="principalpaciente.html">Paciente</a>
+	<a href="principaldoctor.html">Doctor</a>
+	<a href="principalcuidador.html">Cuidador</a>
 
 </body>
 </html>
