--- a/pgs/index.html
+++ b/pgs/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="CSS/w3.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<title>Vitabes</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
