--- a/pgs/seleccionregistro.html
+++ b/pgs/seleccionregistro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="CSS/w3.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<title>Seleccionar tipo de registro</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
@@ -59,6 +59,8 @@
 		  		</div>
 		  	</form>
 	</div>
-
+	<script src="../JS/moment.js"></script>
+	<script src="../JS/jquery.js"></script>
+	<script src="../JS/valid.js"></script>
 </body>
 </html>
