--- a/pgs/bitacoradoctor.html
+++ b/pgs/bitacoradoctor.html
@@ -99,6 +99,8 @@
     		document.getElementById("myOverlay").style.display = "none";
 		}
 	</script>
-
+	<script src="../JS/moment.js"></script>
+	<script src="../JS/jquery.js"></script>
+	<script src="../JS/valid.js"></script>
 </body>
 </html>
