--- a/pgs/inicio.html
+++ b/pgs/inicio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="CSS/w3.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<title>Vitabes</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
@@ -40,8 +40,8 @@
 	</div>
 
 	<a href="principalpaciente.html">Paciente</a>
-	<script src="JS/node_modules/jquery/dist/jquery.js"></script>
-	<script src="JS/node_modules/moment/moment.js"></script>
-	<script src="JS/valid.js"></script>
+	<script src="../JS/moment.js"></script>
+	<script src="../JS/jquery.js"></script>
+	<script src="../JS/valid.js"></script>
 </body>
 </html>
