--- a/pgs/principalpaciente.html
+++ b/pgs/principalpaciente.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="CSS/w3.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Vitabes</title>
 </head>
@@ -48,6 +48,8 @@
     		document.getElementById("myOverlay").style.display = "none";
 		}
 	</script>
-
+	<script src="../JS/moment.js"></script>
+	<script src="../JS/jquery.js"></script>
+	<script src="../JS/valid.js"></script>
 </body>
 </html>
