--- a/pgs/rcuidador.html
+++ b/pgs/rcuidador.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="CSS/w3.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<title>Registro Cuidador</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
@@ -25,5 +25,8 @@
 			</p>
 		</form>
 	</div>
+	<script src="../JS/moment.js"></script>
+	<script src="../JS/jquery.js"></script>
+	<script src="../JS/valid.js"></script>
 </body>
 </html>
