--- a/pgs/bitacorapaciente.html
+++ b/pgs/bitacorapaciente.html
@@ -76,7 +76,7 @@
 			<br>
 			<form>
 				<button class="w3-button w3-xlarge w3-square w3-teal">Modificar Bitácora</button>
-				<button class="w3-button w3-xlarge w3-square w3-teal" type="submit" formaction="añadirinformacionb.html">Añadir Información</button>
+				<button class="w3-button w3-xlarge w3-square w3-teal" type="submit" formaction="addInfo.html">Añadir Información</button>
 			</form>
 
 		</div>
