--- a/pgs/inicio.html
+++ b/pgs/inicio.html
@@ -40,6 +40,8 @@
 	</div>
 
 	<a href="principalpaciente.html">Paciente</a>
+	<a href="principalcuidador.html">Cuidador</a>
+	<a href="principaldoctor.html">Doctor</a>
 	<script src="../JS/moment.js"></script>
 	<script src="../JS/jquery.js"></script>
 	<script src="../JS/valid.js"></script>
