--- a/pgs/principalcuidador.html
+++ b/pgs/principalcuidador.html
@@ -15,7 +15,7 @@
 		<button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Cerrar &times;</button>
 		<a href="principalcuidador.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-home"></i> Pagina principal</a>
 		<a href="bitacoracuidador.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf0ce;</i> Bitacora</a>
-		<a href="" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf2bc;</i> Carnet</a>
+		<a href="carnetcuidador.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf2bc;</i> Carnet</a>
 		<a href="graficogeneral.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf080;</i> Grafico</a>
 		
 		<form>
