--- a/pgs/principaldoctor.html
+++ b/pgs/principaldoctor.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Vitabes</title>
 </head>
-<body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
+<body class="w3-pale-red" style="margin: 1rem; padding: 1rem;">
 
 	<div class="w3-panel w3-light-blue w3-card-4">
 		<p class="w3-center w3-opacity" style="font-size: 2.5rem;">Vitabes-Doctor</p>
