--- a/pgs/registropacientec.html
+++ b/pgs/registropacientec.html
@@ -34,23 +34,23 @@
 			<div class="w3-panel w3-light-gray w3-hover-shadow w3-padding-64 w3-center" style="width:100%;">
 				<p>      
 					<label class="w3-text-cyan"><b>Nombre de Usuario</b></label>
-					<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Nombre:" style="width:135px" required>
+					<input class="val-texto w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Nombre:" style="width:135px" required>
 				</p>
 
 				<p>
 					<label class="w3-text-cyan"><b>Correo Electronico</b></label>
-					<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Correo electronico:" style="width:270px" required>
+					<input class="val-mail w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="email" placeholder="Correo electronico:" style="width:270px" required>
 				</p>
 
 				<div class="w3-half">
 					<p class="w3-center">
-						<button class="w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 20%">Siguiente</button>
+						<button class="subida w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 40%">Siguiente</button>
 					</p>
 				</div>
 
 				<div class="w3-half">
 					<p class="w3-center">
-						<button class="w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 20%">Cancelar</button>
+						<button class="subida w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 60%">Cancelar</button>
 					</p>
 				</div>
 
