--- a/pgs/bitacorapaciente.html
+++ b/pgs/bitacorapaciente.html
@@ -75,8 +75,8 @@
 		</div>
 			<br>
 			<form>
-				<button class="w3-button w3-xlarge w3-square w3-teal">Modificar Bitácora</button>
-				<button class="w3-button w3-xlarge w3-square w3-teal" type="submit" formaction="addInfo.html">Añadir Información</button>
+				<button class="w3-button w3-xlarge w3-square w3-teal" type="submit" formaction="modificarbitacorapaciente.html">Modificar Bitácora</button>
+				<button class="w3-button w3-xlarge w3-square w3-teal" type="submit" formaction="anadirinformacionb.html">Añadir Información</button>
 			</form>
 
 		</div>
