--- a/pgs/inicio.html
+++ b/pgs/inicio.html
@@ -39,9 +39,9 @@
 		</form>
 	</div>
 
-	<a href="principalpaciente.html">Paciente</a>
+	<a href="principalpaciente.html">Paciente</a><br>
+	<a href="principaldoctor.html">Doctor</a><br>
 	<a href="principalcuidador.html">Cuidador</a>
-	<a href="principaldoctor.html">Doctor</a>
 	<script src="../JS/moment.js"></script>
 	<script src="../JS/jquery.js"></script>
 	<script src="../JS/valid.js"></script>
