--- a/pgs/nosotros.html
+++ b/pgs/nosotros.html
@@ -19,18 +19,25 @@
 	</div>
 
 	<div class="w3-half">
-		<div class="w3-panel w3-cyan w3-hover-shadow w3-padding-64 w3-center" style="width:95%; min-height: 650px; margin: 2rem;">
-    		<p>Logo de la empresa</p>
+		<div class="w3-panel w3-light-grey w3-hover-shadow w3-padding-64 w3-center" style="width:95%; min-height: 650px; margin: 2rem;">
+    		<img src="../RECURSOS/Logo MSIL.png" style="width: 100%">
   		</div>
 	</div>
 
 	<div class="w3-half">
 		<div class="w3-panel w3-light-blue w3-hover-shadow w3-padding-64 w3-center" style="width: 93%; min-height: 650px; margin: 2rem;">
 	  		<p><h1 class="w3-opacity">Multisoftware Innovation</h1></p>
+	  		
 	  		<p>
-	  			Texto sobre la empresa <br><br>
-	  			kausbdkuaygsiudgakjsbcygasokaskjagskudygakusbdkuaygskudgaasdasdasi
-	  			uygalkjfbskudflkjabsoiudgsobgiuabdkufgidgfoiubsaidubfsuydgfkubsadkufygisauydgfiusybfiuya
+	  			<h5 class="w3-opacity" align="left">Misión</h5>
+
+	  			<h6 class="w3-opacity" align="left">La misión de MultiSoftware Innovation, es la creación e implementación de productos y servicios de software apoyándonos permanentemente en criterios innovadores y tecnologías en evolución de forma suficiente, económica y con productos de la mayor calidad, siempre velando por el mayor servicio posible a los usuarios.
+
+				MultiSoftware Innovation se enorgullece de brindar a sus clientes un servicio ajustado a sus necesidades y perfiles específicos otorgando la mayor calidad y confiabilidad en cada producto distribuido.</h6><br>
+
+				<h5 class="w3-opacity" align="left">Visión</h5>
+
+				<h6 class="w3-opacity" align="left">La visión de MultiSoftware Innovation es convertirse en una empresa competitiva, líder en soluciones, ofreciendo software de calidad e innovación dentro de México y Latinoamérica.</h6>
 	  		</p>
 	  	</div>
 	</div>
