--- a/pgs/carnetpaciente.html
+++ b/pgs/carnetpaciente.html
@@ -108,19 +108,19 @@
       					<form class="w3-container" action="/action_page.php">
         					<div class="w3-section">
           						<label><b>Horario</b></label>
-          						<input class="val-horario w3-input w3-border w3-margin-bottom" type="text" placeholder="hh:mm" name="horario" required>
+          						<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="hh:mm" name="horario" required>
           						<input class="w3-radio" type="radio" name="AM" value="AM">AM
           						<input class="w3-radio" type="radio" name="PM" value="PM">PM <br>
           						<label><b>Fecha</b></label>
-          						<input class="val-fecha w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
+          						<input class="w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
           						<label><b>Titulo</b></label>
-          						<input class="val-texto w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
-          						<button class="val-subida w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
+          						<input class="w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
+          						<button class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
         					</div>
       					</form>
 
       					<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-        					<button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-red">Cancel</button>
+        					<button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-red">Cancelar</button>
       					</div>
 
     				</div>
@@ -191,15 +191,15 @@
           						<input class="w3-radio" type="radio" name="AM" value="AM">AM
           						<input class="w3-radio" type="radio" name="PM" value="PM">PM <br>
           						<label><b>Nombre del doctor</b></label>
-          						<input class="val-texto w3-input w3-border" type="text" placeholder="NombreD" name="NombreD" required>
+          						<input class="w3-input w3-border" type="text" placeholder="NombreD" name="NombreD" required>
           						<label><b>Numero de clinica</b></label>
-          						<input class="val-num w3-input w3-border" type="text" placeholder="NoClinica" name="NoClinica" required>
+          						<input class="w3-input w3-border" type="text" placeholder="NoClinica" name="NoClinica" required>
           						<label><b>Fecha</b></label>
-          						<input class="val-fecha w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
+          						<input class="w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
           						<label><b>Titulo</b></label>
-          						<input class="val-texto w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
+          						<input class="w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
           						<label><b>Descripcion</b></label>
-          						<input class="val-texto w3-input w3-border" type="text" placeholder="Descripcion" name="Descripcion" required>
+          						<input class="w3-input w3-border" type="text" placeholder="Descripcion" name="Descripcion" required>
 
 
           						<button class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
@@ -207,7 +207,7 @@
       					</form>
 
       					<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-        					<button onclick="document.getElementById('id02').style.display='none'" type="button" class="w3-button w3-red">Cancel</button>
+        					<button onclick="document.getElementById('id02').style.display='none'" type="button" class="w3-button w3-red">Cancelar</button>
       					</div>
 
     				</div>
