--- a/pgs/cuidador_paciente.html
+++ b/pgs/cuidador_paciente.html
@@ -4,18 +4,20 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<title>Vitabes</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
 
 	<div class="w3-panel w3-light-blue w3-card-4">
-		<p class="w3-center w3-opacity" style="font-size: 2.5rem;">Vitabes-Doctor</p>
+		<p class="w3-center w3-opacity" style="font-size: 2.5rem;">Vitabes-Cuidador</p>
 	</div>
 	<div class="w3-sidebar w3-bar-block w3-animate-left" style="display:none;z-index:5" id="mySidebar">
 		<button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Cerrar &times;</button>
-		<a href="principaldoctor.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-home"></i> Pagina principal</a>
-		<a href="registropaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-male"></i> Registrar paientes</a>
-		<a href="vispaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-search"></i> Pacientes</a>
+		<a href="principalcuidador.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-home"></i> Pagina principal</a>
+		<a href="registropacientec.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-male"></i> Registrar paientes</a>
+		<a href="carnetcuidador.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf2bc;</i> Carnet</a>
+		<a href="vispacientec.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-search"></i> Pacientes</a>
 		<form>
 			<button class="w3-bar-item w3-button w3-bottom" formaction="inicio.html" style="width: 5rem;"><i style="font-size:3rem" class="fa">&#xf00d;</i></button>
 			<button class="w3-bar-item w3-button w3-bottom" formaction="ajustespaciente.html" style="width: 5rem; margin-left: 4rem;"><i style="font-size:3rem" class="fa">&#xf085;</i></button>
@@ -28,11 +30,36 @@
 		<button class="w3-button w3-light-blue w3-xxlarge w3-display-topleft" style="margin: 5rem;" onclick="w3_open()">&#9776;</button>
 		<div class="w3-container">
 
-			<h1 class="w3-center w3-opacity">Bienvenido</h1>
+			<h1 class="w3-center w3-opacity">(Paciente)</h1>
 
 			<div class="w3-panel w3-light-gray w3-hover-shadow w3-padding-64 w3-center" style="width:100%;">
-	    		<p>Imagen</p>
+
+	    		<div class="w3-third w3-left">
+	    			<img src="../RECURSOS/Logo MSIL.png" style="width: 100%">
+	    		</div>
+
+	    		<div class="w3-twothird">
+	    			Datos:<br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+	    			<div class="w3-third">
+	    				<a href="bitacoracuidador.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf0ce;</i> Bitacora</a>
+	    			</div>
+
+	    			<div class="w3-third">
+	    				<a href="" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf2bc;</i> Carnet</a>
+	    			</div>
+
+	    			<div class="w3-third">
+	    				<a href="graficogeneral.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf080;</i> Grafico</a>
+	    			</div>
+
+	
+	    		</div>
+
 	  		</div>
+		<div>
+			<a href="vispaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i class="material-icons">keyboard_backspace</i>Regresar</a>
+		</div>
 			
 		</div>
 	</div>
