--- a/pgs/index.html
+++ b/pgs/index.html
@@ -12,66 +12,83 @@
 	</div>
 
 	<div class="w3-bar w3-gray">
-	    <a href="index.html" class="w3-bar-item w3-button w3-text-white w3-opacity" style="font-size: 1.5rem;">Pagina principal</a>
-		<a href="nosotros.html" class="w3-bar-item w3-button w3-text-white w3-opacity" style="font-size: 1.5rem;">Nosotros</a>
-		<a href="inicio.html" class="w3-bar-item w3-button w3-text-white w3-opacity" style="font-size: 1.5rem;">Iniciar Sesión/Registrarse</a>
-	</div>
-
-	<div class="w3-panel w3-pale-blue w3-hover-shadow w3-padding-64 w3-center" style="width:100%">
-    	<p>Imagen</p>
-  	</div>
-
-  	<div class="w3-half">
-	  	<div class="w3-container w3-teal w3-hover-shadow w3-padding-64 w3-center" style="width: 99%">
-	  		<p><h1 class="w3-opacity">Porque el tiempo ya no es oro...sino vida</h1></p>
-	  		<p>
-	  			Texto random <br><br>
-	  			kausbdkuaygsiudgakjsbcygasokaskjagskudygakusbdkuaygskudgaasdasdasi
-	  			uygalkjfbskudflkjabsoiudgsobgiuabdkufgidgfoiubsaidubfsuydgfkubsadkufygisauydgfiusybfiuya
-	  		</p>
-	  	</div>
-
-	  	<div class="w3-panel w3-teal w3-hover-shadow w3-padding-64 w3-center" style="width: 99%">
-	  		<p><h1 class="w3-opacity">Bitacora para el control de la diabetes en linea</h1></p>
-	  		<div class="w3-panel w3-pale-blue w3-hover-shadow w3-padding-64 w3-center" style="width:100%">
-	    		<p>Imagen</p>
-	  		</div>
-	  		<p>
-	  			<br>Texto random <br><br>
-	  		</p>
-	  	</div>
-	</div>
-
-	<div class="w3-half">
-		<div class="w3-container w3-teal w3-hover-shadow w3-padding-64 w3-center" style="width: 100%">
-			<p><h1 class="w3-opacity">No estarás solo en esto!</h1></p>
-
-			<div class="w3-third">
-				<div class="w3-panel w3-pale-blue w3-hover-shadow w3-padding-64 w3-center" style="width:90%;">
-	    			<p>Imagen</p>
-	  			</div>
-			</div>
-
-			<div class="w3-third">
-				<div class="w3-panel w3-pale-blue w3-hover-shadow w3-padding-64 w3-center" style="width:90%;">
-	    			<p>Imagen</p>
-	  			</div>
-			</div>
-
-			<div class="w3-third">
-				<div class="w3-panel w3-pale-blue w3-hover-shadow w3-padding-64 w3-center" style="width:90%;">
-	    			<p>Imagen</p>
-	  			</div>
-			</div>
-
-			<p>
-				<h1 class="w3-opacity">Mas texto XD</h1>
-			</p>
-
+		<div class="w3-third">
+	    	<a href="index.html" class="w3-bar-item w3-button w3-text-white w3-opacity" style="font-size: 1.5rem;">Pagina principal</a>
+		</div>
+		<div class="w3-third">
+			<a href="nosotros.html" class="w3-bar-item w3-button w3-text-white w3-opacity" style="font-size: 1.5rem;">Nosotros</a>
+		</div>
+		<div class="w3-third">
+			<a href="inicio.html" class="w3-bar-item w3-button w3-text-white w3-opacity" style="font-size: 1.5rem;">Iniciar Sesión/Registrarse</a>
 		</div>
 	</div>
 
-	
+	<div class="w3-panel w3-cyan w3-hover-shadow w3-padding-16 w3-center w3-content w3-display-container" style="width:100% height: 100%">
+    		<img class="mySlides w3-animate-left" src="../RECURSOS/Tiempo.png" style="width: 100%">
+    		<img class="mySlides w3-animate-left" src="../RECURSOS/Logo MSI(1).png" style="width: 100%">
+
+
+    	<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+
+    		<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+
+    			<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+
+	    	<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)" style="height: 18px"></span>
+
+	    		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)" style="height: 18px"></span>
+
+  		</div>
+
+  	</div>
+
+
+
+  	<script>
+		var slideIndex = 1;
+		showDivs(slideIndex);
+
+		function plusDivs(n) {
+  		showDivs(slideIndex += n);
+		}
+
+		function currentDiv(n) {
+  		showDivs(slideIndex = n);
+		}
+
+		function showDivs(n) {
+ 		 var i;
+  		var x = document.getElementsByClassName("mySlides");
+ 		var dots = document.getElementsByClassName("demo");
+  if (n > x.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+     x[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+     dots[i].className = dots[i].className.replace(" w3-white", "");
+  }
+  x[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " w3-white";
+}
+</script>
+
+	<script>
+		var myIndex = 0;
+		carousel();
+
+			function carousel() {
+    			var i;
+    			var x = document.getElementsByClassName("mySlides");
+    		for (i = 0; i < x.length; i++) {
+      			x[i].style.display = "none";  
+			}
+    			myIndex++;
+			if (myIndex > x.length) {myIndex = 1}    
+   				 x[myIndex-1].style.display = "block";  
+    		setTimeout(carousel, 6000);    
+			}
+</script>
 	<script src="../JS/moment.js"></script>
 	<script src="../JS/jquery.js"></script>
 	<script src="../JS/valid.js"></script>
