--- a/pgs/carnetpaciente.html
+++ b/pgs/carnetpaciente.html
@@ -108,14 +108,14 @@
       					<form class="w3-container" action="/action_page.php">
         					<div class="w3-section">
           						<label><b>Horario</b></label>
-          						<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="hh:mm" name="horario" required>
-          						<input class="w3-radio" type="radio" name="AM" value="AM">AM
+          						<input class="val-texto w3-input w3-border w3-margin-bottom" type="text" placeholder="hh:mm" name="horario" required>
+          						<input class=" w3-radio" type="radio" name="AM" value="AM">AM
           						<input class="w3-radio" type="radio" name="PM" value="PM">PM <br>
           						<label><b>Fecha</b></label>
-          						<input class="w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
+          						<input class="val-fecha w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
           						<label><b>Titulo</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
-          						<button class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
+          						<input class="val-texto w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
+          						<button class="val-subida w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
         					</div>
       					</form>
 
@@ -187,22 +187,22 @@
       					<form class="w3-container" action="/action_page.php">
         					<div class="w3-section">
           						<label><b>Horario</b></label>
-          						<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="hh:mm" name="horario" required>
+          						<input class="val-num w3-input w3-border w3-margin-bottom" type="text" placeholder="hh:mm" name="horario" required>
           						<input class="w3-radio" type="radio" name="AM" value="AM">AM
           						<input class="w3-radio" type="radio" name="PM" value="PM">PM <br>
           						<label><b>Nombre del doctor</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="NombreD" name="NombreD" required>
+          						<input class="val-texto w3-input w3-border" type="text" placeholder="NombreD" name="NombreD" required>
           						<label><b>Numero de clinica</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="NoClinica" name="NoClinica" required>
+          						<input class="val-texto w3-input w3-border" type="text" placeholder="NoClinica" name="NoClinica" required>
           						<label><b>Fecha</b></label>
-          						<input class="w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
+          						<input class="val-fecha w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
           						<label><b>Titulo</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
+          						<input class="val-texto w3-input w3-border" type="text" placeholder="Titulo" name="Titulo" required>
           						<label><b>Descripcion</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Descripcion" name="Descripcion" required>
+          						<input class="val-texto w3-input w3-border" type="textarea" placeholder="Descripcion" name="Descripcion" required>
 
 
-          						<button class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
+          						<button class="val-subida w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
         					</div>
       					</form>
 
