--- a/pgs/rcuidador.html
+++ b/pgs/rcuidador.html
@@ -17,7 +17,7 @@
 			
 			<p>      
 				<label class="w3-text-cyan"><b>Nombre de Usuario del Paciente</b></label>
-				<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" placeholder="Usuario" type="text" style="width:135px">
+				<input class="val-texto w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" placeholder="Usuario" type="text" style="width:135px">
 			</p>
 
 			<p class="w3-center">
