--- a/pgs/registropaciente.html
+++ b/pgs/registropaciente.html
@@ -38,7 +38,7 @@
 
 				<p>
 					<label class="w3-text-cyan"><b>Correo Electronico</b></label>
-					<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Correo electronico:" style="width:270px" required>
+					<input class="val-mail w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Correo electronico:" style="width:270px" required>
 				</p>
 
 				<div class="w3-half">
