--- a/pgs/seleccionregistro.html
+++ b/pgs/seleccionregistro.html
@@ -18,12 +18,12 @@
 	  			<div>
 		  			<p>      
 						<label class="w3-text-cyan w3-left"><b>Nombre completo</b></label>
-						<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Usuario" required>
+						<input class="val-texto w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Usuario" required>
 					</p>
 
 					<p>      
 						<label class="w3-text-cyan w3-left"><b>Edad</b></label>
-						<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Nombre completo" required>
+						<input class="val-num w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Nombre completo" required>
 					</p>
 
 					<p>      
@@ -37,23 +37,23 @@
 					</p>
 
 					<p>      
-						<label class="w3-text-cyan w3-left"><b>Correo electronico</b></label>
-						<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Usuario" required>
+						<label class=" w3-text-cyan w3-left"><b>Correo electronico</b></label>
+						<input class="val-mail w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Usuario" required>
 					</p>
 				</div>
 
 		  		<div class="w3-third">
-		  			<button class="w3-button w3-white w3-ripple" type="submit" formaction="rdoctor.html">
+		  			<button class="val-subida w3-button w3-white w3-ripple" type="submit" formaction="rdoctor.html">
 		  				<h2 class="w3-opacity">Doctor</h2>
 		  			</button>
 		  		</div>
 		  		<div class="w3-third">
-		  			<button class="w3-button w3-white w3-ripple" type="submit" formaction="rpaciente.html">
-		  				<h2 class="w3-opacity">Paciente</h2>
+		  			<button class="val-subida w3-button w3-white w3-ripple" type="submit" formaction="rpaciente.html">
+		  				<h2 class="val-subida w3-opacity">Paciente</h2>
 		  			</button>
 		  		</div>
 		  		<div class="w3-third">
-		  			<button class="w3-button w3-white w3-ripple" type="submit" formaction="rcuidador.html">
+		  			<button class="val-subida w3-button w3-white w3-ripple" type="submit" formaction="rcuidador.html">
 		  				<h2 class="w3-opacity">Cuidador (Amigo/Familiar)</h2>
 		  			</button>
 		  		</div>
