--- a/pgs/graficospaciente.html
+++ b/pgs/graficospaciente.html
@@ -51,22 +51,22 @@
       					<form class="w3-container" action="/action_page.php">
         					<div class="w3-section">
           						<label><b>Nombre</b></label>
-          						<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="nombre" name="Nombre" required>
+          						<input class="val-texto w3-input w3-border w3-margin-bottom" type="text" placeholder="nombre" name="Nombre" required>
           						<label><b>Edad</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Edad" name="Edad" required>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="Edad" name="Edad" required>
           						<label><b>Peso</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Peso" name="Peso" required>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="Peso" name="Peso" required>
           						<label><b>IMC</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="IMC" name="IMC" required>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="IMC" name="IMC" required>
           						<label><b>Talla</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Talla" name="Talla" required>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="Talla" name="Talla" required>
           						<label><b>Nivel de Glucosa</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Glucosa" name="NivelGlucosa" required>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="Glucosa" name="NivelGlucosa" required>
           						<label><b>Nivel de Hemoglobina</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="Nivel de Hemoglobina" name="NivelHemoglobina" required>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="Nivel de Hemoglobina" name="NivelHemoglobina" required>
           						<label><b>Presion arterial</b></label>
-          						<input class="w3-input w3-border" type="text" placeholder="PresionArterial" name="Presion" required>
-          						<button class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
+          						<input class="val-num w3-input w3-border" type="text" placeholder="PresionArterial" name="Presion" required>
+          						<button class="val-subida w3-button w3-block w3-teal w3-section w3-padding" type="submit">Crear</button>
         					</div>
       					</form>
 
