--- a/pgs/modificarbitacorapaciente.html
+++ b/pgs/modificarbitacorapaciente.html
@@ -30,7 +30,7 @@
 		<div class="w3-container">
 
 			<label><b class="w3-opacity">Ingresa la Fecha</b></label>
-          	<input class="w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
+          	<input class="val-fecha w3-input w3-border" type="date" placeholder="Fecha" name="Fecha" required>
 
 
           	<form>
@@ -93,16 +93,16 @@
 		          						
 		          					</tr>
 		          					<tr>
-		          						<td><input class="w3-input w3-border" type="text" placeholder="" name="NivelGlucosa"></td>
-		          						<td><input class="w3-input w3-border" type="text" placeholder="Presion Arterial" name="PresionArterial"></td>
-		          						<td><input class="w3-input w3-border" type="text" placeholder="Nivel de Hemoglobina" name="NivelHemoglobina"></td>
-		          						<td><input class="w3-input w3-border" type="text" placeholder="Alimentos" name="Alimentos"></td>
-		          						<td><input class="w3-input w3-border" type="text" placeholder="Medicamentos" name="Medicamentos"></td>
-		          						<td><input class="w3-input w3-border" type="text" placeholder="+" name="+" required></td>
+		          						<td><input class="val-num w3-input w3-border" type="text" placeholder="" name="NivelGlucosa"></td>
+		          						<td><input class="val-num w3-input w3-border" type="text" placeholder="Presion Arterial" name="PresionArterial"></td>
+		          						<td><input class="val-num w3-input w3-border" type="text" placeholder="Nivel de Hemoglobina" name="NivelHemoglobina"></td>
+		          						<td><input class="val-texto w3-input w3-border" type="text" placeholder="Alimentos" name="Alimentos"></td>
+		          						<td><input class="val-texto w3-input w3-border" type="text" placeholder="Medicamentos" name="Medicamentos"></td>
+		          						<td><input class="val-texto w3-input w3-border" type="text" placeholder="+" name="+" required></td>
 		          					</tr>
 	          					</table>
 
-          						<button class="w3-button w3-block w3-teal w3-section w3-padding" type="submit">Modificar</button>
+          						<button class="val-subida w3-button w3-block w3-teal w3-section w3-padding" type="submit">Modificar</button>
         					</div>
       					</form>
 
