--- a/pgs/nosotros.html
+++ b/pgs/nosotros.html
@@ -43,45 +43,45 @@
 	</div>
 
 
-	<form action="/action_page.php" class="w3-panel w3-card-4 w3-light-grey w3-text-teal w3-margin">
+	<form action="Power" class="w3-panel w3-card-4 w3-light-grey w3-text-teal w3-margin">
 		<h2 class="w3-center">Contactanos</h2>
  
 		<div class="w3-row w3-section">
 			<div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
 		    <div class="w3-rest">
-				<input class="w3-input w3-border" name="first" type="text" placeholder="Nombre(s)">
+				<input class="val-texto w3-input w3-border" name="first" type="text" placeholder="Nombre(s)">
 		    </div>
 		</div>
 
 		<div class="w3-row w3-section">
 			<div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
 		    <div class="w3-rest">
-				<input class="w3-input w3-border" name="last" type="text" placeholder="Apellidos">
+				<input class="val-texto w3-input w3-border" name="last" type="text" placeholder="Apellidos">
 		    </div>
 		</div>
 
 		<div class="w3-row w3-section">
 			<div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
 		    <div class="w3-rest">
-				<input class="w3-input w3-border" name="email" type="text" placeholder="Email">
+				<input class="val-mail w3-input w3-border" name="email" type="text" placeholder="Email">
 		    </div>
 		</div>
 
 		<div class="w3-row w3-section">
 			<div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
 		    <div class="w3-rest">
-				<input class="w3-input w3-border" name="phone" type="text" placeholder="Telefono">
+				<input class="val-phone w3-input w3-border" name="phone" type="text" placeholder="Telefono">
 		    </div>
 		</div>
 
 		<div class="w3-row w3-section">
 			<div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
 		    <div class="w3-rest">
-				<input class="w3-input w3-border" name="message" type="text" placeholder="Mensaje">
+				<input class="val-texto w3-input w3-border" name="message" type="text" placeholder="Mensaje">
 		    </div>
 		</div>
 
-		<button class="w3-button w3-block w3-section w3-teal w3-ripple w3-padding">Enviar</button>
+		<button class="val-subida w3-button w3-block w3-section w3-teal w3-ripple w3-padding">Enviar</button>
 
 	</form>
 	<script src="../JS/moment.js"></script>
