--- a/pgs/rdoctor.html
+++ b/pgs/rdoctor.html
@@ -21,7 +21,7 @@
 			</p>
 
 			<p class="w3-center">
-				<button class="w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 20%">Siguiente</button>
+				<button class="val-subida w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 20%">Siguiente</button>
 			</p>
 		</form>
 	</div>
