--- a/pgs/rpaciente.html
+++ b/pgs/rpaciente.html
@@ -17,15 +17,15 @@
 			
 			<p>      
 				<label class="w3-text-cyan"><b>Peso</b></label>
-				<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Kg" style="width:135px">
+				<input class="val-num w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Kg" style="width:135px">
 			</p>
 			<p>      
 				<label class="w3-text-cyan"><b>Talla</b></label>
-				<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="cm" style="width:135px">
+				<input class="val-num w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="cm" style="width:135px">
 			</p>
 			<p>      
 				<label class="w3-text-cyan"><b>Nivel de glucosa</b></label>
-				<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="" style="width:135px">
+				<input class="val-num w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="" style="width:135px">
 			</p>
 
 			<p>      
@@ -37,12 +37,12 @@
 					<input class="w3-radio" type="radio" name="No" value="No">
 					<label>No</label>
 
-				<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Alergias" style="width:270px">
+				<input class="val-texto w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Alergias" style="width:270px">
 			</p>
 
 			<p>
 				<label class="w3-text-cyan"><b>Correo familiar o cuidador</b></label>
-				<input class="w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Correo electronico" style="width:270px" required>
+				<input class="val-mail w3-input w3-animate-input w3-light-gray w3-hover-light-blue" name="last" type="text" placeholder="Correo electronico" style="width:270px" required>
 			</p>
 			<p class="w3-center">
 				<button class="w3-button w3-ripple w3-teal" type="submit" formaction="inicio.html" style="width: 20%">Siguiente</button>
