--- a/pgs/vispacientec.html
+++ b/pgs/vispacientec.html
@@ -36,7 +36,7 @@
 
 			<div class="w3-panel w3-light-gray w3-hover-shadow w3-padding-64 w3-center" style="width:100%;">
 	    		
-	    		 <input class="w3-input w3-border w3-padding" type="text" placeholder="Buscar paciente" id="myInput" onkeyup="myFunction()">
+	    		 <input class="val-IDKEY w3-input w3-border w3-padding" type="text" placeholder="Buscar paciente" id="myInput" onkeyup="myFunction()">
 
   <table class="w3-table-all w3-margin-top" id="myTable">
     <tr>
