--- a/pgs/inicio.html
+++ b/pgs/inicio.html
@@ -21,7 +21,7 @@
 		<form class="w3-container">
 			<p>      
 				<label class="w3-text-cyan"><b>Nombre de Usuario</b></label>
-				<input class="texto w3-input w3-animate-input w3-pale-blue" name="first" type="text" placeholder="Usuario" style="width:135px">
+				<input class=" texto w3-input w3-animate-input w3-pale-blue" name="first" type="text" placeholder="Usuario" style="width:135px">
 			</p>
 			<p>      
 				<label class="w3-text-cyan"><b>Contraseña</b></label>
@@ -39,9 +39,9 @@
 		</form>
 	</div>
 
-	<a href="principalpaciente.html">Paciente</a>
+	<a href="principalpaciente.html">Paciente</a><br>
+	<a href="principaldoctor.html">Doctor</a><br>
 	<a href="principalcuidador.html">Cuidador</a>
-	<a href="principaldoctor.html">Doctor</a>
 	<script src="../JS/moment.js"></script>
 	<script src="../JS/jquery.js"></script>
 	<script src="../JS/valid.js"></script>
