--- a/pgs/vispaciente.html
+++ b/pgs/vispaciente.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/w3.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<title>Vitabes</title>
 </head>
 <body class="w3-pale-blue" style="margin: 1rem; padding: 1rem;">
@@ -34,7 +35,7 @@
 
 			<div class="w3-panel w3-light-gray w3-hover-shadow w3-padding-64 w3-center" style="width:100%;">
 	    		
-	    		 <input class="w3-input w3-border w3-padding" type="text" placeholder="Buscar paciente" id="myInput" onkeyup="myFunction()">
+	    		 <input class="val-IDKEY w3-input w3-border w3-padding" type="text" placeholder="Buscar paciente" id="myInput" onkeyup="myFunction()">
 
   <table class="w3-table-all w3-margin-top" id="myTable">
     <tr>
@@ -43,7 +44,7 @@
     </tr>
     <tr>
       <td>1</td>
-      <td>.....</td>
+      <td><a href="doctor_paciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i class="material-icons">accessibility</i>Pedrito</a></td>
     </tr>
     <tr>
       <td>2</td>
