Actualizacion de interfaz grafica de usuario(final paciente)
Actualizacion final por parte del paciente.

Esa va a ser la version definitiva del paciente.

Se arreglo los bugs que tenia e implemente la nueva barra de navegacion en el paciente.

Proxima actualizacion del codigo: cuidador.

--- a/Vitabetes-master/pgs/inicio.html
+++ b/Vitabetes-master/pgs/inicio.html
@@ -34,8 +34,8 @@
 				<button class="w3-button w3-ripple w3-teal" type="submit" formaction="index.html" style="width: 90%" >Volver</button>
 			</div>
 			<div class="w3-third">
-				<button class="w3-button w3-ripple w3-teal" type="submit" formaction="seleccionregistro.html" style="width: 90%">Registrar</button>
-			</div>
+				<button class="w3-button w3-ripple w3-teal" type="submit" formaction="seleccionregistro.html" style="width: 90%">Registrar</button><br>
+			</div><br><br>
 		</form>
 	</div>
 
