--- a/Vitabetes-master/pgs/principalpaciente.html
+++ b/Vitabetes-master/pgs/principalpaciente.html
@@ -7,27 +7,47 @@
 <body class="w3-pale-blue">
 
 <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+
+
   <button class="w3-bar-item w3-button w3-large"
   onclick="w3_close()">Close &times;</button>
+
+
     <a href="principalpaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa fa-home"></i> Pagina principal</a>
     <a href="bitacorapaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf0ce;</i> Bitacora</a>
     <a href="carnetpaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf2bc;</i> Carnet</a>
     <a href="graficospaciente.html" class="w3-bar-item w3-button" style="font-size: 1.5rem;"><i style="font-size:2rem;" class="fa">&#xf080;</i> Grafico</a>
+
+
     <form>
+
       <button class="w3-bar-item w3-button w3-bottom" formaction="inicio.html" style="width: 5rem;"><i style="font-size:3rem" class="fa">&#xf00d;</i></button>
       <button class="w3-bar-item w3-button w3-bottom" formaction="ajustespaciente.html" style="width: 5rem; margin-left: 4rem;"><i style="font-size:3rem" class="fa">&#xf085;</i></button>
+
     </form>
+
+
 </div>
 
 <div id="main">
 
+
   <div class="w3-container">
+
+
     <div class="w3-panel w3-light-blue w3-card-4">
+
       <button id="openNav" class="w3-button w3-light-blue w3-xxlarge w3-dislpay-left" style="font-size: 3rem;" onclick="w3_open()">&#9776;</button>
-      <p class="w3-right w3-opacity" style="font-size: 2.5rem; width: 65%; margin: .5rem;">Vitabes-Paciente</p>
+      <p class="w3-right w3-opacity" style="font-size: 2.5rem; width: 60%; margin: .5rem;">Vitabes-Paciente</p>
 
     </div>
+
+        <div class="w3-panel w3-light-gray w3-hover-shadow w3-padding-64 w3-center" style="width:100%;">
+          <p>Imagen</p>
+        </div>
+
   </div>
+
 
 <div class="w3-container">
 
@@ -50,6 +70,10 @@ function w3_close() {
   document.getElementById("openNav").style.display = "inline-block";
 }
 </script>
+<script src="../JS/moment.js"></script>
+<script src="../JS/jquery.js"></script>
+<script src="../JS/valid.js"></script>
+
 
 </body>
 </html>
